--- a/lai-compiler-v4/bin/.gitignore
+++ b/lai-compiler-v4/bin/.gitignore
@@ -6,3 +6,8 @@
 /LaiAST$CreateVar.class
 /LaiAST$LaiVariable.class
 /LaiAST$LaiType.class
+/LaiAST$SetVar.class
+/LaiAST$StringLiteral.class
+/LaiAST$IntegerLiteral.class
+/LaiAST$RootNode.class
+/LaiAST$FileNode.class
